wupdserver/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webpagetest-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webpagetest-server
  template:
    metadata:
      labels:
        app: webpagetest-server
    spec:
      containers:
      - name: webpagetest-server
        image: webpagetest/server
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 5
