wupdserver/services.yml
apiVersion: v1
kind: Service
metadata:
  name: webpagetest-server
spec:
  selector:
    app: webpagetest-server
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
